# sindy

./: .gitignore  CMakeLists.txt  README.md
sindy/: CMakeLists.txt  RunTime.cc  RunTime.h  SQLite.cc  SQLite.h  SindyMath.cc  SindyMath.h  SindyString.cc  SindyString.h  pch.h
unittest/: CMakeLists.txt  EasyLogTest.cc  SindyMathTest.cc  SindyStringTest.cc  SindyTest.cc
unittest/SindySqlite/: ConstDefine.cc  ConstDefine.h  SqliteTest.cc  TableData.cc  TableData.h
unittest/SindySqlite/effective/: CFunctions.cc  CFunctions.h  HighPerformance.cc  HighPerformance.h  MultiAttach.cc  MultiAttach.h
unittest/SindySqlite/sample/: ExpresstionEvaluate.cc  ExpresstionEvaluate.h  ExpresstionTest.cc  ExpresstionTest.h
unittest/SindySqlite/sql/: case_when.cc  case_when.h  group_by.cc  group_by.h  petal.cc  petal.h
unittest/data/: yjc20210819.db3
